Route Admins to Dashboard, Fix Prop Player spacing

--- a/app/assets/stylesheets/active_admin.css.scss
+++ b/app/assets/stylesheets/active_admin.css.scss
@@ -21,15 +21,10 @@ textarea {
   height: 9px;
 }
 
-input#prop_maximum_dollars, input#prop_over_under, input#prop_result,
- input#transfer_amount_dollars, input#wager_spread, input#wager_odds,
- input#wager_risk_dollars, input#wager_spread_line, input#wager_odds_juice
+input#transfer_amount_dollars, input#wager_spread, input#wager_odds,
+input#wager_risk_dollars, input#wager_spread_line, input#wager_odds_juice
   {
   width: 50px;
-}
-
-.player, .available {
-  width: 250px;
 }
 
 .hidden {
